# Step-DeepResearch

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  authority.py  model_provider.py  react_agent.py  runner.py  tools.py
backend/: __init__.py  config.py  database.py  main.py  models.py  scenarios.py  server.py  websocket.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ComparePage.tsx  EvaluationPage.tsx  ResearchPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SettingsPage.tsx
frontend/src/store/: runStore.ts
frontend/src/types/: index.ts
