[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-showcase"
version = "0.1.0"
description = "Copilot Deep Research Showcase - A developer-facing application demonstrating Step-DeepResearch capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GitHub Copilot Showcase Team" }
]
keywords = ["ai", "research", "agent", "react-loop", "deep-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "duckduckgo-search>=4.1.0",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
deep-research = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
